--- a/ProjetoFinal/Base.lproj/Main.storyboard
+++ b/ProjetoFinal/Base.lproj/Main.storyboard
@@ -78,10 +78,10 @@
             </objects>
             <point key="canvasLocation" x="548" y="-125"/>
         </scene>
-        <!--Child View Controller-->
+        <!--Sub View Conteudo Filho-->
         <scene sceneID="wGG-hT-Pmj">
             <objects>
-                <viewController storyboardIdentifier="textoConteudo" id="mb5-FA-vEN" customClass="APPChildViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="textoConteudo" id="mb5-FA-vEN" customClass="SubViewConteudoFilho" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="PTh-v6-vwy"/>
                         <viewControllerLayoutGuide type="bottom" id="sgM-6z-vip"/>
@@ -91,26 +91,35 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vW9-AJ-DS6">
-                                <rect key="frame" x="20" y="20" width="728" height="205"/>
+                                <rect key="frame" x="33" y="574" width="728" height="205"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ln9-vT-Y6r">
+                                <rect key="frame" x="20" y="20" width="679" height="266"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" keyboardAppearance="alert"/>
+                            </textView>
                         </subviews>
                     </view>
                     <connections>
                         <outlet property="lblConteudo" destination="vW9-AJ-DS6" id="wgw-c2-l4E"/>
+                        <outlet property="txtConteudo" destination="ln9-vT-Y6r" id="NH8-tR-q4k"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1De-U9-E6b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="552" y="1020"/>
         </scene>
-        <!--View Controller-->
+        <!--Sub View Conteudo-->
         <scene sceneID="9wj-8y-ED1">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="sIv-jj-fJc" customClass="APPViewController" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="sIv-jj-fJc" customClass="SubViewConteudo" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="lAa-yz-GEm"/>
                         <viewControllerLayoutGuide type="bottom" id="qWw-cE-iFA"/>
