--- a/ProjetoFinal/Base.lproj/Main.storyboard
+++ b/ProjetoFinal/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="tHn-97-uZ9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13D65" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="tHn-97-uZ9">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -130,10 +130,10 @@
             </objects>
             <point key="canvasLocation" x="1521" y="1381"/>
         </scene>
-        <!--View Controller - controlador q tem a lista de exercicios-->
+        <!--ExercicioV Iew Contoller - controlador q tem a lista de exercicios-->
         <scene sceneID="dzV-zg-u19">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="tQW-Gq-m4D" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="tQW-Gq-m4D" customClass="ExercicioVIewContoller" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="UmD-ev-9Sw"/>
                         <viewControllerLayoutGuide type="bottom" id="xUr-Ao-Cuu"/>
@@ -152,6 +152,9 @@
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="controlador q tem a lista de exercicios" id="JZK-R4-l7x"/>
+                    <connections>
+                        <outlet property="viewMolde" destination="nAQ-RW-D80" id="NzJ-d2-cNR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5sD-gj-Hhq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
